client/app/community/[commName]/[forumSlug]/[postId]/postPage.module.css
.container {
    padding: 40px;
    max-width: 800px;
    margin: 0 auto;
    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
    color: #fff;
}

.postCard {
    border: 1px solid #999;
    border-radius: 12px;
    padding: 20px;
    margin-bottom: 20px;
    box-shadow: 0 4px 8px rgba(0,0,0,0.05);
    background-color: rgba(57, 65, 83, 1);
    color: #fff;
    position: relative;
    transition: transform 0.15s ease;
}

.postCard:hover {
    transform: scale(1.02);
}



.replyCard {
    border: 1px solid #999;
    border-radius: 10px;
    padding: 15px;
    margin-bottom: 15px;
    background-color: rgba(57, 65, 83, 1);
    color: #fff;
    transition: transform 0.15s ease;
}

.replyCard p,
.postCard p {
    white-space: pre-wrap;
    word-wrap: break-word;
}

.title {
    font-size: 24px;
    font-weight: 600;
}

.contents {
    font-size: 16px;
    font-weight: 400;
}

.meta {
    font-size: 14px;
    font-weight: 100;
    color: #ccc;
    margin-top: 5px;
    display: flex;
    width: 10%;
    height: 2.5vh;
}

.postBox{
    height: 20vh;
    width: 100%;
    font-family: Inria Sans;
}

.userIcon{
    background-color: rgb(168, 156, 156);
    height: 20px;
    width: 20px;
    border-radius: 1em;
}

.userTextAlignPosts{
    font-size: 12px;
    margin-left: 5px;
}

.time {
    font-size: 12px;
    color: #bbb;
    margin-top: 3px;
}

.actions {
    display: flex;
    margin-top: 10px;
    width: 15%;
    height: 4vh;
    background-color: #6c757d;
    justify-content: space-between;
    border-radius: 40px;
    border: 1px solid white;
}

.voteButton {
    background-color: #6c757d;
    font-size: 14px;
    color: white;
    padding: 5px 10px;
    border: none;
    border-radius: 6px;
    cursor: pointer;
    width: 33%;
    height: 3.9vh;
    transition: background-color 0.2s ease;
    font-size: 10px;
    text-align: center;
    border-radius: 40px 0 0 40px;
    border: 1px solid white;
}

.dislikeButton{
    border-radius: 0 40px 40px 0;
}

.yayscore{
    width: 50%;
    height: 3vh;
    margin-top: 5%;
    text-align: center;
}

.voteButton:hover {
    background-color: #5a6268;
}

.yayActive {
    background-color: #4caf50;
}

.nayActive {
    background-color: #d9534f;
}

.replyButton {
    font-size: 14px;
    color: #fff;
    padding: 5px 10px;
    border: none;
    border-radius: 40px;
    cursor: pointer;
    margin-top: 10px;
    margin-right: 32px;
    width: 95%;
    transition: background-color 0.2s ease;
    border: 1px solid white;
    text-align: left;
    font-family: Inria Sans;
}

.submitButton {
    font-size: 14px;
    color: #fff;
    padding: 5px 10px;
    border: none;
    border-radius: 40px;
    cursor: pointer;
    margin-left: 92.5%;
    width: 8%;
    height: 8vh;
    transition: background-color 0.2s ease;
    border: 1px solid white;
    text-align: center;
    font-family: Inria Sans;
}

.submitButton:hover{
    background-color: green;
}

.replyButton:hover {
    background-color: #517cad;
}

.editButton {
    background-color: #f0ad4e;
    font-size: 14px;
    color: #fff;
    padding: 5px 10px;
    border: none;
    border-radius: 6px;
    cursor: pointer;
    margin-top: 10px;
    margin-right: 10px;
    transition: background-color 0.2s ease;
    font-family: Inria Sans;
}

.editButton:hover {
    background-color: #ec971f;
}

.replyBox{
    margin-top: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    height: 20vh;
}

.replyInput {
    display: block;
    width: 100%;
    height: 35vh;
    margin-bottom: 10px;
    padding: 10px;
    border-radius: 8px;
    border: 1px solid #ccc;
    font-size: 14px;
}

.deleteButton {
    background-color: #d9534f;
    font-size: 14px;
    color: white;
    border: none;
    border-radius: 8px;
    padding: 5px 10px;
    margin-right: 10px;
    cursor: pointer;
    font-family: Inria Sans;
}

.deleteButton:hover {
    background-color: #c9302c;
}

@font-face {
  font-family: Jura;
  src: url('../../../../../public/fonts/Jura-Light.ttf');
}

@font-face {
  font-family: Inria Sans;
  src: url('../../../../../public/fonts/InriaSans-Light.ttf');
}

.background {
    background-color: rgb(28, 38, 66);
    display: flex;
    width: 100%;
    height: 100vh;
}

.notificationButton{
    height: 30px;
    width: 30px;
    border-radius: 1em;
    background-color: #394153;
    margin-left: 10px;
}

.settingsIcon{
    height: 40px;
    width: 40px;
    border-radius: 50%;
    background-color: #B8B8B8;
}

.dropdownMenu {
    background-color: #5B6680;
    width: 150px;
    height: 150px;
    right: 0px;
    border-radius: 1em;
    position: absolute;
    opacity: 0;
    pointer-events: none;
    display: flex;
    flex-direction: column;
    align-items: center;
    color: white;
}

.dropdownMenu:hover{
    background-color: #828FAF;
}

.dropdown:focus-within .dropdownMenu{
    opacity: 1;
    pointer-events: auto;
}

.yourCommunitiesBar{
    background-color: rgb(11, 11, 44);
    width: 20%;
    height: 25vh;
    display: flex;
    flex-direction: column;
    position: absolute;
    top: 51px;
    font-family: Inria Sans;
    color: gray;
    text-indent: 3%;
    overflow-y: auto;
    overflow-x: hidden;
}

.serverBar{
    background-color: rgb(11, 11, 44);
    width: 20%;
    height: 70vh;
    display: flex;
    flex-direction: column;
    position: absolute;
    bottom: 0vw;
    text-indent: 3%;
    font-family: Inria Sans;
    font-size: 25px;
    color: rgb(255, 255, 255);
    overflow-y: auto;
    overflow-x: hidden;
}

.serverContainer{
    background-color: rgb(11, 11, 44);
    width: 100%;
    height: 65vh;
    display: flex;
    flex-direction: column;
    position: absolute;
    bottom: 0vw;
    font-family: Inria Sans;
    font-size: 15px;
    color: gray;
}

.channelText{
    font-family: Inria Sans;
    font-size: 15px;
    color: rgb(255, 255, 255);
    margin-left: 10px;
}


.horizontalLine{
    background-color: #AAAAAA;
    width: 95%;
    height: 1px;
    margin-left: 8px;
}


.communitiesButtons{
    width: 90%;
    margin-left: 10px;
    height: 50px;
    display: flex;
    flex-wrap: nowrap;
    border-radius: 1em;
}

.addIcon{
    background-color: rgb(168, 156, 156);
    margin-top: 5px;
    height: 40px;
    width: 40px;
    border-radius: 1em;
}

.buttonTextforCommunities{
    text-align: left;
    margin-top: 15px;
    margin-left: 10px;
    font-family: Inria Sans;
    color: rgb(255, 255, 255);
    position: relative;
    font-size: 0.8rem;
}

.communitiesButtons:hover{
    background-color: #394153;
}

.channelInfoBox{
    background-color: rgb(11, 11, 44);
    width: 20%;
    height: 20vh;
    display: flex;
    flex-direction: column;
    position: absolute;
    top: 51px;
    right: 0px;
    font-family: Inria Sans;
    color: gray;
    text-indent: 3%;
    overflow-y: auto;
    overflow-x: hidden;
}

.channelInfoh1{
    margin-top: 10px;
    color: rgb(255, 255, 255);
    font-size: 25px;
}

.channelInfoh2{
    margin-top: 10px;
    font-size: 15px;
    text-indent: 0%;
    margin-left: 3%;
}

.UserContainer{
    margin-left: 3%;
    display: flex;
    color: gray;
    font-size: 17px;
    
}

.userTextAlign{
    margin-left: 3%;
    margin-top: 4%;
}

.RulesBar{
    background-color: rgb(11, 11, 44);
    width: 20%;
    height: 75vh;
    display: flex;
    flex-direction: column;
    position: absolute;
    right: 0px;
    bottom: 0vw;
    font-family: Inria Sans;
    color: rgb(255, 255, 255);
    font-size: 25px;
    text-indent: 3%;
    overflow-y: auto;
    overflow-x: hidden;
}

.usersBar{
    background-color: rgb(11, 11, 44);
    width: 100%;
    height: 45vh;
    display: flex;
    flex-direction: column;
    position: absolute;
    right: 0px;
    bottom: 0vw;
    font-family: Inria Sans;
    color: rgb(255, 255, 255);
    font-size: 25px;
    text-indent: 3%;
    overflow-y: auto;
    overflow-x: hidden;
}

.navBox{
    background-color: rgb(11, 11, 44);
    width: 100%;
    height: 51px;
    display: flex;
    justify-content: space-between;
}

.communnitiesPage{
    width: 60%;
    height: calc(100vh - 51px);
    overflow-y: auto;
    overflow-x: hidden;
    position: absolute;
    left:20vw;
    top: 2.5vw;
    display: flex;
    flex-direction: column;
    color: gray;
    font-size: 20px;  
}

.postsPage{
    width: 60%;
    height: calc(100vh - 51px);
    overflow-y: auto;
    overflow-x: hidden;
    position: absolute;
    left:20vw;
    top: 2.5vw;
    display: flex;
    flex-direction: column;
    color: gray;
    font-size: 20px;
}

